added and styled certificates

--- a/html/css/style.css
+++ b/html/css/style.css
@@ -23,6 +23,14 @@
 /*	01) SHANE BASE
 /*---------------------------------------------------*/
 
+#certificate-de {
+  bottom: -350px;
+}
+
+#certificate-jp {
+  bottom: -250px;
+}
+
 html {
 	overflow-x: hidden;
 	padding: 0px;
