--- a/html/css/style.css
+++ b/html/css/style.css
@@ -31,6 +31,12 @@
   bottom: -250px;
 }
 
+#send-button {
+  background-color: transparent;
+  color: transparent;
+  border-color: transparent;
+}
+
 html {
 	overflow-x: hidden;
 	padding: 0px;
